<resources>
    <string name="app_name">eShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="update">Update Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="acc_text">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="registration">Join With Us</string>
    <string name="login_info">Enter Your Credential</string>
    <string name="no_account">Do not have an Id?</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="new_to_eshop">New to eShop?</string>
    <string name="reg_to_explore">Register to Explore</string>
    <string name="orient">Welcome to eShop. We are committed to give you the best online shopping experience with reliability and super fast speedy service. Explore us to the best ever online shopping platform.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="search_hint">Search Products</string>
    <string name="popular_product">Popular Products</string>
    <string name="explore_product">Explore Category</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View All</string>
    <string name="description">Description</string>
    <string name="rating">5.0</string>
    <string name="discount">Discount: 30% off</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="discount_string">Discount</string>
    <string name="discount_value">20%</string>
    <string name="off">OFF</string>
    <string name="new_product">Currently there is no new product.</string>
    <string name="add_to_cart">Currently your cart is empty.</string>
    <string name="my_current_order">You have not buy anything yet.</string>
    <string name="no_offer">Currently there is no offer.</string>
    <string name="price">Price</string>
    <string name="tk">tk</string>
    <string name="amount">19</string>
    <string name="detailed_product">Detailed Product</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>