<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

        <EditText
            android:id="@+id/profile_name"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"
            android:padding="15dp"
            android:layout_marginTop="30dp"
            android:elevation="3dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawableTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_email"
            android:background="@drawable/edittext_background"
            android:hint="@string/email"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:elevation="3dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawableTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_phone"
            android:background="@drawable/edittext_background"
            android:hint="@string/phone_number"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:elevation="3dp"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:drawableTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/profile_address"
            android:background="@drawable/edittext_background"
            android:hint="@string/address"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:elevation="3dp"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:drawableTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/update_button"
            android:text="@string/update"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>