<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/popular_img"
            android:layout_width="280dp"
            android:layout_height="190dp"
            app:riv_corner_radius="10dp"
            android:scaleType="centerCrop"
            android:background="@mipmap/offers3"/>

        <TextView
            android:id="@+id/popular_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_product"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/popular_des"
            android:ellipsize="end"
            android:layout_width="190dp"
            android:maxLines="1"
            android:text="@string/description"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/popular_rating"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@drawable/ratingbar"
                android:backgroundTint="@color/purple_500"/>

            <TextView
                android:id="@+id/pop_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/pop_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/purple_500"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>