<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/white_light"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cat_nav_img"
            android:src="@drawable/fruits"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="0dp">

            <TextView
                android:id="@+id/nav_cat_name"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black_acent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/nav_cat_description"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black_acent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/discount_string"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_acent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/nav_cat_discount"
                    android:text="@string/discount_value"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/purple_700"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/off"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black_acent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/ic_baseline_arrow_forward_ios_24"-->
<!--                app:tint="@color/black"-->
<!--                android:layout_gravity="end"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginTop="0dp"/>-->


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>