<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/rec_img"
            android:src="@mipmap/offers3"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/rec_name"
            android:text="@string/product_name"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/rec_dec"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description"
            android:layout_width="110dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/ratingbar"
                app:tint="@color/purple_700"/>

            <TextView
                android:id="@+id/rec_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_weight="1"
                android:layout_marginTop="3dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>